[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_script"]

[node name="HUD" type="CanvasLayer"]
layer = 10
script = ExtResource("1_script")

[node name="HeartsContainer" type="HBoxContainer" parent="."]
anchors_preset = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 300.0
offset_bottom = 60.0
theme_override_constants/separation = 4

[node name="AbilityLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 200.0
offset_right = -20.0
offset_bottom = 350.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "LMB: Attack
RMB: Magic
Q: Companion"
horizontal_alignment = 2

[node name="HintsLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -400.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "WASD Move | Shift Sprint | Space Jump"
horizontal_alignment = 2
vertical_alignment = 0

[node name="LockOnIndicator" type="Control" parent="."]
anchors_preset = 0
offset_right = 30.0
offset_bottom = 30.0
visible = false

[node name="Triangle" type="Label" parent="LockOnIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 0.85, 0.2, 1)
text = "V"
horizontal_alignment = 1
vertical_alignment = 1
